[tool.poetry]
name = "cmdgoogle"
version = "0.1.0"
description = "Google search results in terminal"
authors = ["ugauniyal <ugauniyal@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.2"
terminaltables = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
